--- a/parcial1/Mis_Estilos.css
+++ b/parcial1/Mis_Estilos.css
@@ -21,3 +21,33 @@ span ul li{
     font-weight: 800;
 
 }
+
+#boton{
+    background-color: aquamarine;
+    border: none;
+    font-size: 30px;
+    width: 50%;
+    padding: 20px;
+
+}
+
+.texto{
+    color: black;
+
+}
+
+.link {
+    color: blue;
+    background-color: transparent;
+    text-decoration: none;
+  }
+a:visited {
+    color: orange;
+    background-color: transparent;
+    text-decoration: none;
+  }
+a:hover {
+    color: black;
+    background-color: transparent;
+    text-decoration: underline;
+  }
