--- a/Bodriostar/css/custom.css
+++ b/Bodriostar/css/custom.css
@@ -50,9 +50,33 @@
     font-size: 20px;
     padding-left: 100px;
 }
-.elementor-2450 .elementor-element.elementor-element-5f4cb5f.elementor-wc-products ul.products li.product:hover .button{
-    color: #000000;
-    background-color: orange;
-    border-color: #fff;
-    }
+
+.videothemefont {
+    color: white;
+    font-family: 'Helvetica Now Display';
+    font-weight: bold;
+    font-size: 15px;
+    padding-left: 100px;
+}
+.videodatefont {
+    color: gray;
+    font-family: 'Helvetica Now Display';
+    font-weight: bold;
+    font-size: 15px;
+    padding-left: 50px;
+}
+.videotitlefont {
+    color: white;
+    font-family: 'Helvetica Now Display';
+    font-weight: bold;
+    font-size: 40px;
+    padding-left: 100px;
+}
+.videodescriptionfont {
+    color: white;
+    font-family: 'Helvetica Now Display';
+    font-size: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
 
